[project]
name = "random-tile-bag"
version = "0.1.0"
description = "A program for testing board game mechanics by simulating drawing a random tile from a bag."
authors = [
    {name = "John Harger"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "requests (>=2.32.4,<3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
